--- a/TicTacToe/src/views/MainRoom/Style.css
+++ b/TicTacToe/src/views/MainRoom/Style.css
@@ -1,29 +1,63 @@
-.button
+/*.button
 {
-        -fx-background-color:#DCD8D7;
-	-fx-border: none;
-	-fx-border-radius: 5px;
-	-fx-width: 100%;
-	-fx-font-size: 18px;
-	-fx-padding: 5px;
-	-fx-margin: 20px 0px;
+        -fx-background-color: transparent;
+	-fx-border-color:white;
+	-fx-border-radius: 50px;
+	-fx-font-size: 24px;
+        -fx-text-fill:#09E887;  
 }
-#anchorPane
+
+.button:hover
 {
-        -fx-background-color: rgba(0, 0, 0, 0.5);
-	 -fx-margin: auto auto;
-	 -fx-padding: 40px;
-	 -fx-border-radius: 5px;
-	 -fx-box-shadow: 0 0 10px #000;
-	 -fx-position: absolute;
-	
+    -fx-background-color: #09E887;
+     -fx-text-fill:white; 
+     -fx-border-color:white;
+    -fx-border-radius: 50px;
+    
+}*/
+
+.button {
+    -fx-font-weight: bold;
+    -fx-background-color:  #39b5ff;
+    -fx-background-radius: 30;
+    -fx-font-size: 14;
+    -fx-text-fill: white;
 }
-#field
+
+.button:hover{
+    
+    
+    -fx-background-color: white;
+    -fx-text-fill:    #39b5ff;
+    -fx-border-color:    #39b5ff;
+    -fx-border-width: 2;
+    -fx-border-radius: 30;
+    -fx-font-size: 14;
+    
+    
+    
+}
+
+
+
+.button:pressed{
+    
+    -fx-background-color: white;
+    -fx-text-fill:  #39b5ff;
+    -fx-border-color:  #39b5ff;
+    -fx-border-width: 2;
+    -fx-rotate: 10;
+    -fx-font-size: 14;
+    
+}
+
+
+/*#field
 {
 	-fx-border: none;
 	-fx-padding: 5px;
 	-fx-border-radius: 5px;
-	
+	-fx-width: 385px;
 	-fx-font-size: 18px;
 	-fx-font-family: poppins;
         }
@@ -31,22 +65,82 @@
 {
  -fx-font-weight: 600;
  -fx-padding-bottom: 30px;   
-}
-      
-#plist .content{
-    -fx-background-color: #343741;
-}
-
-#plist {
+}*/
+.table-view {
     
-    -fx-text-fill : white;
+    -fx-background-color: transparent;
+    /*-fx-table-cell-border-color: #ffffff;*/
+
     
 }
-
-#img{
-    -fx-width: 500px;
+.table-view .column-header-background{
+    
+    -fx-background-color:transparent;
+    -fx-border-color:#69BBC0;
 }
 
-#root{
+.table-view .column-header, .table-view .filler{
+    -fx-background-color:transparent;
+}
+
+.table-view .column-header .label{
+    
+    -fx-text-fill:white;
+    -fx-border-color:#69BBC0;
+}
+
+
+
+.table-view .table-cell{
+    -fx-text-fill: whitesmoke;
+}
+.table-row-cell{
+    -fx-background-color: -fx-table-cell-border-color,#152856;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+    -fx-text-style: bold;
+}
+
+/*.table-row-cell:odd{
+    -fx-background-color: -fx-table-cell-border-color, #4652FA;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;     
+}*/
+
+.table-row-cell:selected {
+    -fx-background-color: #1E87F1;
+    -fx-background-insets: 0;
+    -fx-background-radius: 1;
+}
+
+.table-view .virtual-flow .scroll-bar:vertical,
+.table-view .virtual-flow .scroll-bar:vertical .track,
+.table-view .virtual-flow .scroll-bar:vertical .track-background,
+.table-view .virtual-flow .scroll-bar:horizontal,
+.table-view .virtual-flow .scroll-bar:horizontal .track,
+.table-view .virtual-flow .scroll-bar:horizontal .track-background {
+    -fx-background-color: transparent;
+}
+
+.table-view .virtual-flow .scroll-bar .increment-button,
+.table-view .virtual-flow .scroll-bar .decrement-button {
+    -fx-opacity: 0;
+   
+}
+.text-area {
+    -fx-font-family: Consolas;
+    -fx-font-size: 15;
+    -fx-text-fill: linear-gradient(to right,#2556B7, #E4214C);
+    -fx-display-caret:true;
+}
+
+.text-area .content {
+    -fx-background-color: #E5F3FF;
+/*     -fx-text-fill: ;*/
+}
+
+.text-field .content{
+    
+   
     
 }
