--- a/TicTacToe/src/views/SinglePlayer/SinglePlayer.fxml
+++ b/TicTacToe/src/views/SinglePlayer/SinglePlayer.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,21 +12,39 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1200.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.SinglePlayer.SinglePlayerController">
+<AnchorPane id="AnchorPane" prefHeight="707.0" prefWidth="1192.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.SinglePlayer.SinglePlayerController">
    <children>
-      <AnchorPane fx:id="ap" prefHeight="707.0" prefWidth="1194.0">
+      <AnchorPane fx:id="ap" layoutX="-12.0" prefHeight="707.0" prefWidth="1204.0">
          <children>
-            <Button fx:id="restartbtn" onAction="#restart"  layoutX="916.0" layoutY="573.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="222.0" text="Restart" />
-            <BorderPane layoutX="847.0" layoutY="52.0" prefHeight="412.0" prefWidth="339.0">
+            <ImageView fitHeight="853.0" fitWidth="1211.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@testsvg.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="restartbtn" layoutX="937.0" layoutY="696.0" mnemonicParsing="false" onAction="#restart" prefHeight="70.0" prefWidth="255.0" style="-fx-background-color: #80E4C9;" text="Restart">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <BorderPane layoutX="878.0" layoutY="149.0" prefHeight="412.0" prefWidth="314.0">
                <top>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="63.0" prefWidth="357.0" text="AI[Might give him/her a name]" textAlignment="CENTER" BorderPane.alignment="CENTER" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="326.0" text="Bot" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font></Label>
                </top>
-               <bottom>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" text="an image with the another choice" BorderPane.alignment="CENTER" />
-               </bottom>
+               <center>
+                  <ImageView fitHeight="120.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                     <image>
+                        <Image url="@robot.png" />
+                     </image>
+                  </ImageView>
+               </center>
             </BorderPane>
-            <Button fx:id="backbtn" layoutX="54.0" layoutY="573.0" mnemonicParsing="false" onAction="#back2MainRoom" prefHeight="72.0" prefWidth="222.0" text="Back to MainRoom" />
-            <GridPane fx:id="grid"  alignment="CENTER_RIGHT" hgap="10.0" layoutX="369.0" layoutY="86.0" prefHeight="412.0" prefWidth="463.0" vgap="10.0">
+            <Button fx:id="backbtn" layoutX="51.0" layoutY="671.0" mnemonicParsing="false" onAction="#back2MainRoom" prefHeight="77.0" prefWidth="183.0" style="-fx-background-color: transparent;">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <GridPane fx:id="grid" alignment="CENTER_RIGHT" layoutX="376.0" layoutY="149.0" prefHeight="412.0" prefWidth="463.0" vgap="20.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,61 +56,76 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btn1"  onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="131.0" prefWidth="206.0">
+                  <Button fx:id="btn1" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="131.0" prefWidth="206.0" style="-fx-border-width: 5; -fx-border-style: hidden solid solid none;">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn4" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="1">
+                  <Button fx:id="btn4" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid solid none;" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn7" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="2">
+                  <Button fx:id="btn7" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid hidden hidden;" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn2" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1">
+                  <Button fx:id="btn2" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: hidden solid solid solid;" GridPane.columnIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn5" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btn5" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid solid solid;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn3" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2">
+                  <Button fx:id="btn3" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: hidden hidden solid solid;" GridPane.columnIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn6" onAction="#PlayerMove" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btn6" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid hidden solid solid;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn8" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="btn8" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid hidden solid;" textFill="#172d62" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn9" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <Button fx:id="btn9" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid hidden hidden solid;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
                </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </padding>
             </GridPane>
-            <BorderPane layoutX="14.0" layoutY="52.0" prefHeight="412.0" prefWidth="339.0">
+            <BorderPane layoutX="43.0" layoutY="149.0" prefHeight="412.0" prefWidth="314.0">
                <top>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="357.0" text="Player Name" textAlignment="CENTER" BorderPane.alignment="CENTER" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="326.0" text="Player Name" textAlignment="CENTER" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font></Label>
                </top>
-               <bottom>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" text=" an image with the player choice either X/O will replace this " BorderPane.alignment="CENTER" />
-               </bottom>
+               <center>
+                  <ImageView fitHeight="108.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                     <image>
+                        <Image url="@boy.png" />
+                     </image>
+                  </ImageView>
+               </center>
             </BorderPane>
+            <ImageView fitHeight="89.0" fitWidth="226.0" layoutX="32.0" layoutY="707.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@BackButton%20.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
