--- a/TicTacToe/src/views/StartPage/SignUp.fxml
+++ b/TicTacToe/src/views/StartPage/SignUp.fxml
@@ -51,7 +51,7 @@
                         <Font name="System Bold Italic" size="32.0" />
                      </font>
                   </Label>
-                  <Button fx:id="loginbtn" layoutX="120.0" layoutY="489.0" mnemonicParsing="false" onAction="#SignUPhandle" prefHeight="37.0" prefWidth="385.0" text="Sign Up" textFill="WHITE">
+                  <Button fx:id="loginbtn" defaultButton="true" layoutX="120.0" layoutY="489.0" mnemonicParsing="false" onAction="#SignUPhandle" prefHeight="37.0" prefWidth="385.0" text="Sign Up" textFill="WHITE">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
