--- a/TicTacToe/src/views/StartPage/SignIn.fxml
+++ b/TicTacToe/src/views/StartPage/SignIn.fxml
@@ -31,7 +31,7 @@
                         <Font name="System Bold Italic" size="32.0" />
                      </font>
                   </Label>
-                  <Button fx:id="loginbtn" layoutX="108.0" layoutY="421.0" mnemonicParsing="false" onAction="#SignNHandle" prefHeight="37.0" prefWidth="385.0" text="Sign in" textFill="WHITE">
+                  <Button fx:id="loginbtn" defaultButton="true" layoutX="108.0" layoutY="421.0" mnemonicParsing="false" onAction="#SignNHandle" prefHeight="37.0" prefWidth="385.0" text="Sign in" textFill="WHITE">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
