--- a/TicTacToe/src/views/MainRoom/MainRoom.fxml
+++ b/TicTacToe/src/views/MainRoom/MainRoom.fxml
@@ -12,6 +12,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MainRoom.MainRoomController">
@@ -21,23 +23,23 @@
             <Image url="@testsvg.png" />
          </image>
       </ImageView>
-      <BorderPane fx:id="plist" layoutX="947.0" layoutY="-14.0" prefHeight="424.0" prefWidth="304.0">
+      <BorderPane fx:id="plist" layoutX="937.0" layoutY="-1.0" prefHeight="431.0" prefWidth="309.0">
          <top>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="44.0" prefWidth="305.0" style="-fx-background-color: #DBDBDB;" text="List of Players" BorderPane.alignment="CENTER">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="44.0" prefWidth="315.0" style="-fx-background-color: #39b5ff;" text="List of Players" textFill="WHITE" BorderPane.alignment="CENTER">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font></Label>
          </top>
          <center>
-            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="305.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tableView" prefHeight="387.0" prefWidth="305.0" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn fx:id="name" prefWidth="158.39996033906937" text="Player Name" />
-                <TableColumn fx:id="status" prefWidth="146.40000305175784" text="Status" />
+                <TableColumn fx:id="name" prefWidth="159.0" text="Player Name" />
+                <TableColumn fx:id="status" prefWidth="147.0" text="Status" />
               </columns>
             </TableView>
          </center>
       </BorderPane>
-      <BorderPane layoutX="942.0" layoutY="431.0" prefHeight="402.0" prefWidth="308.0">
+      <BorderPane layoutX="939.0" layoutY="454.0" prefHeight="373.0" prefWidth="309.0">
          <top>
             <Label alignment="CENTER" prefHeight="35.0" prefWidth="309.0" style="-fx-background-color: #39b5ff;" text="Global Chat" textFill="WHITE" BorderPane.alignment="CENTER">
                <font>
@@ -79,76 +81,115 @@
             </TextArea>
          </center>
       </BorderPane>
-      <AnchorPane id="anchorPane" layoutX="391.0" layoutY="79.0" prefHeight="671.0" prefWidth="465.0">
+      <AnchorPane id="anchorPane" layoutX="405.0" layoutY="79.0" prefHeight="671.0" prefWidth="465.0">
          <children>
-            <Button fx:id="multiBTN" layoutX="87.0" layoutY="273.0" mnemonicParsing="false" onAction="#PlayVsFriend" prefHeight="80.0" prefWidth="310.0" text="Invite Player" />
-            <Button fx:id="signleBTN" layoutX="87.0" layoutY="149.0" mnemonicParsing="false" onAction="#PlayVsAI" prefHeight="80.0" prefWidth="310.0" text="Play vs Computer" textFill="WHITE">
-               <font>
-                  <Font name="System Bold Italic" size="24.0" />
-               </font></Button>
-            <Button fx:id="Games" layoutX="87.0" layoutY="407.0" mnemonicParsing="false" onAction="#SavedGames" prefHeight="80.0" prefWidth="310.0" text="Saved Games" />
-             <Button layoutX="119.0" layoutY="506.0" mnemonicParsing="false" prefHeight="95.0" prefWidth="261.0" style="-fx-background-color: transparent; -fx-border-color: transparent;">
-               <graphic>
-                  <ImageView fitHeight="119.0" fitWidth="252.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@4.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
+            <VBox layoutX="87.0" layoutY="149.0" spacing="35.0">
+               <children>
+                  <Button fx:id="signleBTN" mnemonicParsing="false" onAction="#PlayVsAI" prefHeight="80.0" prefWidth="310.0" text="Play vs Computer" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold Italic" size="24.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="multiBTN" mnemonicParsing="false" onAction="#PlayVsFriend" prefHeight="80.0" prefWidth="310.0" text="Invite Player" />
+                  <Button mnemonicParsing="false" onAction="#SavedGames" prefHeight="80.0" prefWidth="310.0" text="Saved Games" />
+                  <Button mnemonicParsing="false" onAction="#LeaderBoard" prefHeight="80.0" prefWidth="310.0" text="Leaderboard" />
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="32.0" layoutY="205.0" prefHeight="111.0" prefWidth="305.0">
+      <AnchorPane layoutX="31.0" layoutY="14.0" prefHeight="448.0" prefWidth="336.0" style="-fx-border-color: white; -fx-border-style: hidden dashed dashed hidden; -fx-border-radius: 25px;">
          <children>
-            <Label fx:id="pN" prefHeight="25.0" prefWidth="110.0" text="PlayerName:" textFill="#fffefe">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label fx:id="pS" layoutY="41.0" prefHeight="17.0" prefWidth="59.0" text="Score:" textFill="#fffefe">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label fx:id="pW" layoutY="79.0" prefHeight="27.0" prefWidth="59.0" text="Wins:" textFill="#fffefe">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelName" layoutX="173.0" prefHeight="25.0" prefWidth="110.0" text="name" textFill="#fffefe">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelScore" layoutX="173.0" layoutY="41.0" prefHeight="27.0" prefWidth="110.0" text="score" textFill="#fffefe">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelWins" layoutX="173.0" layoutY="79.0" prefHeight="27.0" prefWidth="96.0" text="wins" textFill="#fffefe">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
+            <HBox layoutX="14.0" layoutY="198.0" prefHeight="229.0" prefWidth="320.0" spacing="20.0">
+               <children>
+                  <VBox spacing="20.0">
+                     <children>
+                        <Label fx:id="pN" prefHeight="25.0" prefWidth="110.0" text="PlayerName:" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="pS" prefHeight="17.0" prefWidth="59.0" text="Score:" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="pW" prefHeight="27.0" prefWidth="59.0" text="Wins:" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="pW5" prefHeight="27.0" prefWidth="96.0" text="Games:" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="pW4" prefHeight="27.0" prefWidth="59.0" text="Losses" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="pW2" prefHeight="27.0" prefWidth="59.0" text="Draws" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox spacing="20.0">
+                     <children>
+                        <Label fx:id="labelName" prefHeight="27.0" prefWidth="215.0" text="name" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelScore" prefHeight="27.0" prefWidth="110.0" text="score" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelWins" prefHeight="27.0" prefWidth="96.0" text="wins" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelGames" prefHeight="27.0" prefWidth="59.0" text="games" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelLosses" prefHeight="27.0" prefWidth="59.0" text="losses" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelDraws" prefHeight="27.0" prefWidth="59.0" text="draws" textFill="#fffefe">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <ImageView fitHeight="125.0" fitWidth="124.0" layoutX="98.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@boy.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="78.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@boy.png" />
-         </image>
-      </ImageView>
-      <BorderPane fx:id="gamesArea" layoutX="12.0" layoutY="450.0" prefHeight="379.0" prefWidth="233.0" visible="false">
+      <BorderPane fx:id="gamesArea" layoutX="31.0" layoutY="503.0" prefHeight="292.0" prefWidth="336.0" visible="false">
+         <bottom>
+            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="347.0" text="Resume" BorderPane.alignment="CENTER" />
+         </bottom>
          <center>
-            <TableView fx:id="tableView2" prefHeight="170.0" prefWidth="324.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tableView2" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn fx:id="GameID" prefWidth="75.0" text="game ID" />
-                <TableColumn fx:id="Opponent" prefWidth="157.6" text="Opponent" />
+                <TableColumn fx:id="GameID" prefWidth="118.0" text="game ID" />
+                <TableColumn fx:id="Opponent" prefWidth="217.0" text="Opponent" />
               </columns>
             </TableView>
          </center>
-         <bottom>
-            <Button fx:id="resume" mnemonicParsing="false" text="resume" BorderPane.alignment="CENTER" />
-         </bottom>
       </BorderPane>
    </children>
 </AnchorPane>
