--- a/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
+++ b/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,21 +15,32 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="707.0" prefWidth="1321.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MultiPlayer.MultiPlayerController">
+<AnchorPane id="AnchorPane" prefHeight="744.0" prefWidth="1117.0" style="-fx-background-color: #162C60;" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MultiPlayer.MultiPlayerController">
    <children>
-      <AnchorPane fx:id="ap" prefHeight="707.0" prefWidth="1321.0">
+      <ImageView fitHeight="744.0" fitWidth="1130.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@testsvg.png" />
+         </image>
+      </ImageView>
+      <AnchorPane fx:id="ap" prefHeight="744.0" prefWidth="1115.0" stylesheets="@Style.css">
          <children>
-            <Button fx:id="pausebtn" onAction="#pauseGameRequest" layoutX="738.0" layoutY="603.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="222.0" text="Pause" />
-            <BorderPane layoutX="729.0" layoutY="7.0" prefHeight="468.0" prefWidth="240.0">
+            <Button fx:id="restartbtn" layoutX="23.0" layoutY="517.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="222.0" text="Pause" />
+            <BorderPane layoutX="826.0" layoutY="26.0" prefHeight="350.0" prefWidth="285.0">
                <top>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="51.0" prefWidth="240.0" text="Player 2 Name" textAlignment="CENTER" BorderPane.alignment="CENTER" />
+                  <Label fx:id="rightPlayerName" alignment="CENTER" contentDisplay="CENTER" prefHeight="58.0" prefWidth="284.0" text="Player 2 Name" textAlignment="CENTER" BorderPane.alignment="CENTER" />
                </top>
+               <center>
+                  <ImageView fitHeight="83.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                     <image>
+                        <Image url="@boy.png" />
+                     </image></ImageView>
+               </center>
                <bottom>
-                  <TextArea prefHeight="172.0" prefWidth="240.0" text="an image with the another choice" BorderPane.alignment="CENTER" />
+                  <ImageView fx:id="rightPlayer" fitHeight="142.0" fitWidth="152.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
                </bottom>
             </BorderPane>
-            <Button fx:id="backbtn" layoutX="23.0" layoutY="603.0" mnemonicParsing="false" onAction="#back2MainRoom" prefHeight="72.0" prefWidth="222.0" text="Back to MainRoom" />
-            <GridPane alignment="CENTER_RIGHT" hgap="10.0" layoutX="281.0" layoutY="67.0" prefHeight="500.0" prefWidth="380.0" vgap="10.0">
+            <Button fx:id="backbtn" layoutX="23.0" layoutY="620.0" mnemonicParsing="false" onAction="#back2MainRoom" prefHeight="72.0" prefWidth="222.0" text="Back to MainRoom" />
+            <GridPane alignment="CENTER_RIGHT" layoutX="292.0" layoutY="186.0" prefHeight="434.0" prefWidth="482.0" vgap="20.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,77 +52,98 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btn1" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0">
+                  <Button fx:id="btn1" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: hidden solid solid none;">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn4" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="1">
+                  <Button fx:id="btn4" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid solid none;" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn7" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="2">
+                  <Button fx:id="btn7" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid hidden hidden;" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn2" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1">
+                  <Button fx:id="btn2" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: hidden solid solid solid;" GridPane.columnIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn5" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btn5" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid solid solid;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn3" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2">
+                  <Button fx:id="btn3" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: hidden hidden solid solid;" GridPane.columnIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn6" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btn6" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid hidden solid solid;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn8" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="btn8" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid solid hidden solid;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn9" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <Button fx:id="btn9" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" style="-fx-border-width: 5; -fx-border-style: solid hidden hidden solid;" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
                </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </padding>
             </GridPane>
-            <BorderPane layoutX="14.0" layoutY="7.0" prefHeight="457.0" prefWidth="240.0">
+            <BorderPane layoutX="7.0" layoutY="32.0" prefHeight="350.0" prefWidth="285.0">
                <top>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="51.0" prefWidth="240.0" text="Player Name" textAlignment="CENTER" BorderPane.alignment="CENTER" />
-               </top>
-               <bottom>
-                  <TextArea prefHeight="172.0" prefWidth="240.0" text=" an image with the player choice either X/O will replace this " BorderPane.alignment="CENTER" />
-               </bottom>
-            </BorderPane>
-            <BorderPane layoutX="1028.0" layoutY="52.0" prefHeight="558.0" prefWidth="271.0">
-               <top>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="62.0" prefWidth="298.0" text="Chat" BorderPane.alignment="CENTER" />
+                  <Label fx:id="leftPlayerName" alignment="CENTER" contentDisplay="CENTER" prefHeight="58.0" prefWidth="284.0" text="Player Name" textAlignment="CENTER" BorderPane.alignment="CENTER" />
                </top>
                <center>
-                  <TextArea fx:id="chattxt" editable="false" prefHeight="444.0" prefWidth="266.0" BorderPane.alignment="CENTER" />
+                  <ImageView fitHeight="134.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                     <image>
+                        <Image url="@boy.png" />
+                     </image>
+                  </ImageView>
                </center>
                <bottom>
-                  <FlowPane prefHeight="52.0" prefWidth="245.0" BorderPane.alignment="CENTER">
+                  <ImageView fx:id="leftPlayer" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+               </bottom>
+            </BorderPane>
+            <BorderPane layoutX="832.0" layoutY="382.0" prefHeight="343.0" prefWidth="271.0">
+               <top>
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0" prefWidth="280.0" style="-fx-background-color: #39B5FF;" text="Chat" BorderPane.alignment="CENTER" />
+               </top>
+               <center>
+                  <TextArea fx:id="chattxt" editable="false" prefHeight="444.0" prefWidth="266.0" stylesheets="@Style.css" BorderPane.alignment="CENTER" />
+               </center>
+               <bottom>
+                  <FlowPane prefHeight="17.0" prefWidth="271.0" BorderPane.alignment="CENTER">
                      <children>
-                        <TextField fx:id="chatmsg" prefHeight="25.0" prefWidth="216.0" />
-                        <Button fx:id="sendbtn" defaultButton="true" mnemonicParsing="false" onAction="#SendChat" prefHeight="23.0" prefWidth="53.0" text="Send" />
+                        <TextField fx:id="chatmsg" prefHeight="25.0" prefWidth="274.0" />
+                        <Button fx:id="sendbtn" defaultButton="true" mnemonicParsing="false" onAction="#SendChat" prefHeight="27.0" prefWidth="36.0" style="-fx-background-color: transparent;">
+                           <graphic>
+                              <ImageView fitHeight="19.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@android-send_icon-icons.com_50500.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <FlowPane.margin>
+                              <Insets left="235.0" top="-26.0" />
+                           </FlowPane.margin></Button>
                      </children>
                   </FlowPane>
                </bottom>
             </BorderPane>
+            <TextArea fx:id="SHOWTRUN" layoutX="433.0" layoutY="32.0" prefHeight="55.0" prefWidth="228.0" />
          </children>
       </AnchorPane>
    </children>
