--- a/TicTacToe/src/views/MultiPlayer/Style.css
+++ b/TicTacToe/src/views/MultiPlayer/Style.css
@@ -1,29 +1,65 @@
- #backbtn ,#restartbtn,.label,#sendbtn {
-    -fx-background-color: 
-    #4A569D;
-        /* linear-gradient(#38424b 0%, #0B7FAB 20%, #080E2C 100%), */
-      
-    -fx-background-radius: 5,4,3,5;
-    -fx-background-insets: 0,1,2,0;
-    -fx-text-fill: white;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
-    -fx-font-family: "Arial";
-    -fx-text-fill: linear-gradient(white, #d0d0d0);
-    -fx-font-size: 12px;
-    /*-fx-padding: 10 20 10 20;*/
+.label  {
+   -fx-background-color:rgba(255, 255, 255, 0.8);
+    -fx-opacity: 1;  
+    -fx-text-fill:black;
 }
 
 #btn1 ,#btn2 ,#btn3 ,#btn4 ,#btn5 ,#btn6 ,#btn7 ,#btn8 ,#btn9 {
     
-    -fx-background-color: rgba(11, 127, 171, 0.5);
+    -fx-background-color: transparent;  
+/*    rgba(255, 255, 255, 0.8);*/
+    -fx-text-fill: white;
+    -fx-border-color: #7CDCBB;
 
 }
 
 /* background: #E6DADA;  /* fallback for old browsers  
 background: linear-gradient(to right, #274046, #E6DADA);   */
-
-#ap {
-
-    -fx-background-color:#E6DADA,
-    linear-gradient(to right, #274046, #E6DADA);
+.text-area {
+    -fx-font-family: Consolas;
+    -fx-font-size: 15;
+    -fx-text-fill: linear-gradient(to right,#2556B7, #E4214C);
+    -fx-display-caret:true;
 }
+
+.text-area .content {
+    -fx-background-color: #E5F3FF;
+/*     -fx-text-fill: ;*/
+}
+#restartbtn , #backbtn{
+    
+    -fx-background-color:  #39b5ff;
+    -fx-background-radius: 30;
+    -fx-font-weight: bold;
+    -fx-font-size: 14;
+    -fx-text-fill: white;
+}
+
+#restartbtn:hover,#backbtn:hover{
+    
+    
+    -fx-background-color: white;
+    -fx-text-fill:    #39b5ff;
+    -fx-border-color:    #39b5ff;
+    -fx-border-width: 2;
+    -fx-border-radius: 30;
+    -fx-font-size: 14;
+    
+    
+    
+}
+
+
+
+#restartbtn:pressed, #backbtn:pressed{
+    
+    -fx-background-color: white;
+    -fx-text-fill:  #39b5ff;
+    -fx-border-color:  #39b5ff;
+    -fx-border-width: 2;
+    -fx-rotate: 10;
+    -fx-font-size: 14;
+    
+}
+
+    
